fix(yalb-1501): update contrast - make main content sections darker to meet passing contrast ratio

--- a/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
+++ b/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
@@ -32,7 +32,7 @@
     --gin-bg-input: var(--darkest-gray) !important;
     --gin-border-color-table-header: var(--darkest-gray) !important;
     --gin-border-color-form-element: var(--light-gray) !important;
-    --gin-bg-app: #707070;
+    --gin-bg-app: var(--darkest-gray);
     --gin-bg-layer3: var(--dark-theme-gray-hover);
     --colorGinText: var(--darkest-gray);
     --gin-border-color-table-header: var(--darkest-gray);
